fix(ui): Select2 autofilter - match regular filters height(1.5rem) and dropdown height (18.75rem); align padding and dropdown positioning

--- a/openwisp_utils/admin_theme/static/admin/css/ow-auto-filter.css
+++ b/openwisp_utils/admin_theme/static/admin/css/ow-auto-filter.css
@@ -59,6 +59,12 @@
   color: var(--body-fg) !important;
   line-height: 1.5rem;
 }
+
+.auto-filter .select2-selection__rendered {
+  height: 1.5rem;
+  line-height: 1.5rem;
+  padding: 0;
+}
 .auto-filter-choices {
   display: block;
   border: none;
